--- a/src/Component/Props/Button.css
+++ b/src/Component/Props/Button.css
@@ -1,6 +1,6 @@
 /* CSS */
-button {
-  background-image: linear-gradient(-180deg, #1D95C9 0%, #17759C 100%);
+.fun-button,.def-button,button {
+ 
   border-radius: .5rem;
   box-sizing: border-box;
   color: #FFFFFF;
@@ -17,6 +17,18 @@ button {
   touch-action: manipulation;
 }
 
-button:active {
+.def-button{
+ background-image: linear-gradient(-180deg, #1D95C9 0%, #17759C 100%);
+}
+
+.def-button:active{
   background-image: linear-gradient(-180deg, #37AEE2 0%, #1E96C8 100%);
+}
+
+.fun-button{
+  background-image: linear-gradient(-180deg, #d3ae49 0%, #EB5B00 100%);
+}
+
+.fun-button:active{
+  background-image: linear-gradient(-180deg, #FFD35A 0%, #FFA823 100%);
 }
